--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 	<body>
 		<form class="register-form">
 		<div class="form-header">
-			<img src="img/key.png" alt="key" class="form-header__key">
 			<h1 class="title">Create your free account</h1>
-			<p class="subtitle">
+			<p class="description">
 				Come and join our cool and amazing community, fill in your details
 				to get started. Already have an account? <a href="#">Log in.</a>
 			</p>
